
* Added public functions to print product/variable structure and content:
  harp_product_print(), harp_variable_print(), harp_variable_print_data()

* harp_ingest_test() now takes a 'print' parameter to specify a print
  function where test status messages will be written.

* Fixed issue in the HARP Python interface where using the value 0 for
  valid_min or valid_max did not work.

* HARP operations (formerly 'actions') are now executed in a strict sequence.
  This means that you can now do things like:
    'derive(var); var < 10; exclude(var)'

* The 'include()' action/operation has been renamed to 'keep()'.

* The derived variable conversions are now properly split according to the
  dimension types of a variable. This also solves a problem where certain
  valid conversions where not included in a '--list-conversions' print.

* The derived variable conversions that produce uncertainty and covariance
  variables filled with NaNs from scratch have been removed.

* Fixed several derived variable conversions for covariances.

* Added derived variable conversion from time independent to time dependent
  for instrument_latitude, instrument_longitude, and instrument_altitude.

* Removed variables flag_am_pm and flag_day_twilight_night and the conversions
  for flag_am_pm, flag_day_twilight_night, and flag_daytime. These conditions
  can all be determined by directly comparing against the solar angles.

* Added support for ingestion of ECMF GRIB and TEMIS assimilated ozone data.

* Added 'species' ingestion option to the MIPAS L2 ingestion.

* Fixed issue in GEOMS ingestion where long variable names were truncated.

* Introduced convention that dimensionless quantities should have an empty
  'units' attribute string value. Only non-quantities should omit the 'units'
  attribute.

* Introduced a more strict definition of variable names for the HARP data
  format. As part of this the list of supported species and associated naming
  has also been revised.
